--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
+bin/
 build/
 develop-eggs/
 dist/
@@ -18,6 +19,7 @@ lib/
 lib64/
 parts/
 sdist/
+share/
 var/
 wheels/
 share/python-wheels/
